--- a/src/index.html
+++ b/src/index.html
@@ -120,13 +120,15 @@
         </p>
     </div>
     <div id="container2">
-        <svg id="map" width="975" height="610" viewbox="0 0 975 610">
+        <svg id="map" width="975" height="900" viewbox="0 0 975 900">
             <g id="background"></g>
             <g id="vis">
                 <g class="airports"></g>
                 <g class="labels"></g>
             </g>
+            <g id="delaygraph" transform="translate(0,650)"></g>
         </svg>
+        </div>
         <div class="d3cache" style="display: none;"></div>
         <p class="Caption">Take a look at your own airport's delays!</p>
     </div>
