legend, color fix

--- a/src/index.html
+++ b/src/index.html
@@ -199,13 +199,14 @@
         <br>
     </div>
     <div id="container2">
-        <svg id="map" width="975" height="900" viewbox="0 0 975 900">
+        <svg id="map" width="975" height="740" viewbox="0 0 975 900">
             <g id="background"></g>
             <g id="vis">
                 <g class="airports"></g>
                 <g class="labels"></g>
             </g>
             <g id="delaygraph" transform="translate(0,650)"></g>
+            <g id="legend" transform="translate(850,650)"></g>
         </svg>
         </div>
         <div class="d3cache" style="display: none;"></div>
