--- a/src/index.html
+++ b/src/index.html
@@ -206,10 +206,11 @@
                 <g class="labels"></g>
             </g>
             <g id="delaygraph" transform="translate(0,650)"></g>
-            <g id="legend" transform="translate(850,650)"></g>
+            <g id="legend" transform="translate(870,650)"></g>
         </svg>
-        </div>
         <div class="d3cache" style="display: none;"></div>
+        <input type="checkbox" id="delayNormalize" checked/>
+        <label for="delayNormalize" style="user-select: none; -webkit-user-select: none;">Normalize flight count</label>
         <p class="Caption">Different airports have delays for different reasons. Compare a few airports to get a sense for it!</p>
     </div>
     <div class="article">
