Tweaks to text of article, made sidebar for vis1 same color as background to sidestep padding issue.

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
             At least in my family, Chicago’s two main airports are legendary for their volatility.
             We tell horror stories around the campfire about days lost to their endless delays and queues.
             Here's the question: Is Midway really a terrible airport, or was I just unlucky?
-            How could one avoid delayed flights?
+            Can you avoid delays?
         </p>
         <br>
         <br>
@@ -71,14 +71,16 @@
         <p>
             Midway did only a touch worse than the national average in 2024! I must have been unlucky.
             <br><br>
-            Of large airports, the one with the most frequent delays was Baltimore/Washington International (BWI) with a whopping <span class="emphasizedRed">29.4%</span> delay rate,
+            Of large airports, the one with the most frequent delays was Baltimore/Washington International (BWI) with a whopping
+            <span class="emphasizedRed">29.4%</span> delay rate,
             followed closely by Dallas Fort Worth International (DFW) airport at <span class="emphasizedRed">28.8%</span>.
-            (For our purposes, we only count flight cancellations and departure delays that take longer than 15 minutes).
             Compare to Salt Lake City (SLC), with a relatively low delay rate of <span class="emphasizedBlue">17.2%</span>.
+            (For our purposes, we count flight cancellations and departure delays that take longer than 15 minutes).
             <br><br>
             If you’re planning around flight delays, other factors matter beyond your airport of origin.
             Consider destination airport. For instance, <span class="emphasizedRed">54.0%</span> of 2024’s flights from BWI to Oakland were delayed,
-            but only <span class="emphasizedBlue">21.2%</span> of the flights from Baltimore to San Jose were delayed, even though both destination airports are in the Bay area.</p>
+            but only <span class="emphasizedBlue">21.2%</span> of the flights from Baltimore to San Jose were delayed,
+            even though both destination airports are in the Bay area.</p>
         <br>
         <br>
         <br>
@@ -128,6 +130,7 @@
         <p class="Caption">
             Looks like Hawaii has amazing airports (HNL, OGG, LIH, ITO)!
             They have low delay rates despite their large throughput.
+            On the other hand, Florida's airports have relatively high delay rates (MIA, MCO, FLL).
         </p>
     </div>
     <div class="article">
@@ -184,15 +187,13 @@
         <br>
         <br>
         <p>
-            Once your flight’s been pushed back by 15 minutes, your expected wait time jumps to over an hour long.
-            Larger airports have somewhat lower delay times than smaller airports, probably because they're have more flexibility in terms of personnel,
+            Once your flight’s been pushed back by 15 minutes, your expected wait time jumps to over an hour.
+            Larger airports have somewhat lower delay durations than smaller airports,
+            probably because they're have more resources to deal with delays in terms of personnel,
             equipment and funding.
             Not all kinds of delays are the same; delays caused by weather average a <span class="emphasizedRed">93 minute</span> wait time, 
             while security delays average <span class="emphasizedBlue">38 minutes</span>.
             <br><br>
-            [Are bigger airports better able to deal with late aircraft delays?]
-            <br><br>
-            [Are there more weather delays in coastal airports?]
         </p>
         <br>
         <br>
@@ -218,13 +219,16 @@
         <br>
         <br>
         <p>
-            Here have a conclusion
+            Inconveniences may part of traveling, but with some extra thought,
+            you can cut down the odds of travel misery.
+            Poke around the above visualizations for more specifics about your own airports and routes.
         </p>
+        <h3>Pro tips:</h3>
         <ul>
-            <p>something something takeaways</p>
-            <li>Don't fly out of big airports</li>
-            <li>Don't fly out of small airports</li>
-            <li>baltimore</li>
+            <li>Travel via smaller airports where possible</li>
+            <li>Choose morning flights</li>
+            <li>Fewer layovers are better</li>
+            <li>If traveling in summer, build in some extra leeway for delays</li>
         </ul>
         <br>
         <br>
