--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <script defer src="https://cdn.jsdelivr.net/npm/d3@7"></script>
-    <script defer src="http://d3js.org/topojson.v1.min.js"></script>
+    <script defer src="https://d3js.org/topojson.v1.min.js"></script>
     <script type="module" src="index.js"></script>
     <link rel="stylesheet" href="index.css"></style>
 
