Added comment about causes of MDW delays

--- a/src/index.html
+++ b/src/index.html
@@ -192,8 +192,11 @@
             probably because they're have more resources to deal with delays in terms of personnel,
             equipment and funding.
             Not all kinds of delays are the same; delays caused by weather average a <span class="emphasizedRed">93 minute</span> wait time, 
-            while security delays average <span class="emphasizedBlue">38 minutes</span>.
+            while security delays average <span class="emphasizedBlue">38 minutes</span>. Surprisingly, few delays are caused by poor weather
+            or security problems. The majority are caused by the airlines and the airports themselves.
             <br><br>
+            A large of MDW's delays are caused by late incoming flights compared to other large airports,
+            so some of the inconvenience of Chicago may not even be the fault of the airports themselves.
         </p>
         <br>
         <br>
