--- a/src/index.html
+++ b/src/index.html
@@ -104,7 +104,7 @@
             </div>
         </div>
         <div class="d3cache" style="display: none;"></div>
-        <p class="Caption">Take a look at your own airport's delays!</p>
+        <p class="Caption">Click on the map to take a look at your own airport's delays!</p>
     </div>
     <div class="article">
         <br>
@@ -195,7 +195,7 @@
             while security delays average <span class="emphasizedBlue">38 minutes</span>. Surprisingly, few delays are caused by poor weather
             or security problems. The majority are caused by the airlines and the airports themselves.
             <br><br>
-            A large of MDW's delays are caused by late incoming flights compared to other large airports,
+            A large number of MDW's delays are caused by late incoming flights compared to other large airports,
             so some of the inconvenience of Chicago may not even be the fault of the airports themselves.
         </p>
         <br>
@@ -211,8 +211,9 @@
             </g>
             <g id="delaygraph" transform="translate(0,650)">
                 <g id="bars"></g>
+                <g id="axes"></g>
             </g>
-            <g id="legend" transform="translate(870,650)"></g>
+            <g id="legend" transform="translate(840,650)"></g>
         </svg>
         <div class="d3cache" style="display: none;"></div>
         <input type="checkbox" id="delayNormalize" checked/>
